# tgbot-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_test  Doxyfile  README.md  vcpkg.json
.github/workflows/: docker-image.yml
include/tgbot/: Api.h  ApiImpl.h  Bot.h  EventBroadcaster.h  EventHandler.h  Logger.h  TgException.h  TgTypeParser.h  tgbot.h
include/tgbot/net/: BoostHttpOnlySslClient.h  BoostSslClient.h  CRLFHelper.h  CurlHttpClient.h  HttpClient.h  HttpParser.h  HttpReqArg.h  HttpServer.h  HttplibClient.h  TgLongPoll.h  TgWebhookLocalServer.h  TgWebhookServer.h  TgWebhookTcpServer.h
include/tgbot/types/: AcceptedGiftTypes.h  AffiliateInfo.h  Animation.h  Audio.h  BackgroundFill.h  BackgroundFillFreeformGradient.h  BackgroundFillGradient.h  BackgroundFillSolid.h  BackgroundType.h  BackgroundTypeChatTheme.h  BackgroundTypeFill.h  BackgroundTypePattern.h  BackgroundTypeWallpaper.h  Birthdate.h  BotAccessSettings.h  BotCommand.h  BotCommandScopeChatAdministrators.h  BotCommandScopeChatMember.h  BotDescription.h  BotName.h  BotShortDescription.h  BusinessBotRights.h  BusinessConnection.h  BusinessIntro.h  BusinessLocation.h  BusinessMessagesDeleted.h  BusinessOpeningHours.h  BusinessOpeningHoursInterval.h  CallbackGame.h  CallbackQuery.h  Chat.h  ChatAdministratorRights.h  ChatBackground.h  ChatBoost.h  ChatBoostAdded.h  ChatBoostRemoved.h  ChatBoostSource.h  ChatBoostSourceGiveaway.h  ChatBoostUpdated.h  ChatFullInfo.h  (+294 more)
samples/: common_defs.cmake
samples/echobot-curl-client/src/: main.cpp
samples/echobot-setmycommands/src/: main.cpp
samples/echobot-submodule/: CMakeLists.txt
samples/echobot-submodule/src/: main.cpp
samples/echobot-webhook-server/src/: main.cpp
samples/echobot/src/: main.cpp
samples/inline-keyboard/src/: main.cpp
samples/photo/src/: main.cpp
samples/receive-file/src/: main.cpp
samples/received-text-processing/src/: main.cpp
samples/reply-keyboard/src/: main.cpp
scripts/: api_spec.ref  fetch_api_spec.py  gen_parsers.py  gen_types.py  lint_api_types.py  lint_optionals.py
src/: Api.cpp  Bot.cpp  EventHandler.cpp  Logger.cpp  TgException.cpp  TgTypeParser.cpp
src/net/: BoostHttpOnlySslClient.cpp  BoostSslClient.cpp  CurlHttpClient.cpp  HttpParser.cpp  HttplibClient.cpp  TgLongPoll.cpp  TgWebhookServer.cpp  httplib_wrapper.h
src/tools/: StringTools.cpp
src/types/: AcceptedGiftTypes.cpp  AffiliateInfo.cpp  Animation.cpp  Audio.cpp  BackgroundFill.cpp  BackgroundFillFreeformGradient.cpp  BackgroundFillGradient.cpp  BackgroundFillSolid.cpp  BackgroundType.cpp  BackgroundTypeChatTheme.cpp  BackgroundTypeFill.cpp  BackgroundTypePattern.cpp  BackgroundTypeWallpaper.cpp  Birthdate.cpp  BotAccessSettings.cpp  BotCommand.cpp  BotCommandScope.cpp  BotCommandScopeAllChatAdministrators.cpp  BotCommandScopeAllGroupChats.cpp  BotCommandScopeAllPrivateChats.cpp  BotCommandScopeChat.cpp  BotCommandScopeChatAdministrators.cpp  BotCommandScopeChatMember.cpp  BotCommandScopeDefault.cpp  BotDescription.cpp  BotName.cpp  BotShortDescription.cpp  BusinessBotRights.cpp  BusinessConnection.cpp  BusinessIntro.cpp  BusinessLocation.cpp  BusinessMessagesDeleted.cpp  BusinessOpeningHours.cpp  BusinessOpeningHoursInterval.cpp  CallbackGame.cpp  CallbackQuery.cpp  Chat.cpp  ChatAdministratorRights.cpp  ChatBackground.cpp  ChatBoost.cpp  (+318 more)
test/: CMakeLists.txt  utils.h
test/tgbot/: Api.cpp  ApiTest.cpp  InputMediaTest.cpp  RichTextTest.cpp
test/tgbot/net/: HttpParser.cpp
